2018-02-11  Matteo Corti  <matteo@corti.li>

	* tmstatus.sh: Handling first backup

2018-02-08  Matteo Corti  <matteo@corti.li>

	* tmstatus.sh: Disk usage

2018-01-29  Matteo Corti  <matteo@corti.li>

	* tmstatus.sh (status): better phase description

2018-01-26  Matteo Corti  <matteo@corti.li>

	* tmstatus.sh (format_days_ago): better description for <24h

2018-01-25  Matteo Corti  <matteo@corti.li>

	* tmstatus.sh: Corrected a bug in the phase detection. Prints the time remaining only when existing
	* tmstatus.sh: Shows only the percentage if > 1%
	* tmstatus.sh: Consolidated time span computation
	* tmstatus.sh: Corrected time span computation